--- a/src/admin/index.html
+++ b/src/admin/index.html
@@ -5,32 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Admin</title>
 
+    <link rel="stylesheet" href="/jspm_packages/npm/@angular2-material/toolbar@2.0.0-alpha.1/toolbar.css">
+
     <!-- 1. Load libraries -->
     <!-- IE required polyfills, in this exact order -->
-    <script src="/node_modules/es6-shim/es6-shim.min.js"></script>
-    <script src="/node_modules/systemjs/dist/system-polyfills.js"></script>
-    <script src="/node_modules/angular2/es6/dev/src/testing/shims_for_IE.js"></script>
+    <script src="/jspm_packages/system.js"></script>
+    <script src="/config.js"></script>
 
-    <script src="/node_modules/angular2/bundles/angular2-polyfills.js"></script>
-    <script src="/node_modules/systemjs/dist/system.src.js"></script>
-    <script src="/node_modules/rxjs/bundles/Rx.js"></script>
-    <script src="/node_modules/angular2/bundles/angular2.dev.js"></script>
-
-    <!-- 2. Configure SystemJS -->
-    <script>
-        System.config({
-            packages: {
-                app: {
-                    format: 'register',
-                    defaultExtension: 'js'
-                }
-            }
-        });
-        System.import('app/main')
-                .then(null, console.error.bind(console));
-    </script>
 </head>
 <body>
 <deneb-admin></deneb-admin>
+<script>
+    System.import('app');
+</script>
 </body>
 </html>
