update register page with semantic ui rewrite router protection and authentication, now using new security-outlet directive extending from router-outlet which will authenticate user credential on active

--- a/src/index.html
+++ b/src/index.html
@@ -39,7 +39,11 @@
 <body>
 
   <app>
-    Loading...
+    <div class="ui page visible dimmer">
+      <div class="content">
+        <div class="center">Loading...</div>
+      </div>
+    </div>
   </app>
 
   <% if (webpackConfig.metadata.ENV === 'development') { %>
