--- a/src/index.html
+++ b/src/index.html
@@ -46,6 +46,19 @@
     </div>
   </app>
 
+  <% if (webpackConfig.metadata.GA !== '') { %>
+  <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+    ga('create', '<%= webpackConfig.metadata.GA %>', 'auto');
+    ga('send', 'pageview');
+
+  </script>
+  <% } %>
+
   <% if (webpackConfig.metadata.ENV === 'development') { %>
   <!-- Webpack Dev Server reload -->
   <script src="/webpack-dev-server.js"></script>
