--- a/src/index.html
+++ b/src/index.html
@@ -54,7 +54,7 @@
     })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
     ga('create', '<%= webpackConfig.metadata.GA %>', 'auto');
-    ga('send', 'pageview');
+//    ga('send', 'pageview');
 
   </script>
   <% } %>
