add a optional mode for hacking login and register page style.

--- a/src/index.html
+++ b/src/index.html
@@ -25,6 +25,9 @@
   <link rel="icon" type="image/png" sizes="16x16" href="/assets/icon/favicon-16x16.png">
   <link rel="manifest" href="/assets/manifest.json">
   <link rel="stylesheet" href="/assets/css/main.css">
+  <% if (webpackConfig.metadata.customLoginStyle === true) { %>
+  <link rel="stylesheet" href="/assets/css/login.css">
+  <% } %>
   <meta name="msapplication-TileColor" content="#00bcd4">
   <meta name="msapplication-TileImage" content="/assets/icon/ms-icon-144x144.png">
   <meta name="theme-color" content="#00bcd4">
