--- a/src/index.html
+++ b/src/index.html
@@ -2,12 +2,12 @@
 <html lang="">
 <head>
 
-  <title><%= webpackConfig.metadata.title %></title>
+  <title><%= htmlWebpackPlugin.options.title %></title>
 
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="<%= webpackConfig.metadata.title %>">
+  <meta name="description" content="<%= htmlWebpackPlugin.options.title %>">
 
   <!-- use http://www.favicon-generator.org/ to replace files in public/icon-->
   <link rel="apple-touch-icon" sizes="57x57" href="/assets/icon/apple-icon-57x57.png">
@@ -25,7 +25,7 @@
   <link rel="icon" type="image/png" sizes="16x16" href="/assets/icon/favicon-16x16.png">
   <link rel="manifest" href="/assets/manifest.json">
   <link rel="stylesheet" href="/assets/css/main.css">
-  <% if (webpackConfig.metadata.customLoginStyle === true) { %>
+  <% if (htmlWebpackPlugin.options.metadata.customLoginStyle === true) { %>
   <link rel="stylesheet" href="/assets/css/login.css">
   <% } %>
   <meta name="msapplication-TileColor" content="#00bcd4">
@@ -34,7 +34,7 @@
   <!-- end favicon -->
 
   <!-- base url -->
-  <base href="<%= webpackConfig.metadata.baseUrl %>">
+  <base href="<%= htmlWebpackPlugin.options.metadata.baseUrl %>">
   <style>
     #preloader {
       position: fixed;
@@ -126,14 +126,14 @@
   <script>
     ga_events = [];
   </script>
-  <% if (webpackConfig.metadata.GA !== '') { %>
+  <% if (htmlWebpackPlugin.options.metadata.GA !== '') { %>
   <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
         (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
       m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
     })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
-    ga('create', '<%= webpackConfig.metadata.GA %>', 'auto');
+    ga('create', '<%= htmlWebpackPlugin.options.metadata.GA %>', 'auto');
 //    ga('send', 'pageview');
     if(ga_events && ga_events.length > 0) {
       while(ga_events.length > 0) {
@@ -145,7 +145,7 @@
   </script>
   <% } %>
 
-  <% if (webpackConfig.metadata.ENV === 'development') { %>
+  <% if (htmlWebpackPlugin.options.metadata.ENV === 'development') { %>
   <!-- Webpack Dev Server reload -->
   <script src="/webpack-dev-server.js"></script>
   <% } %>
