--- a/src/index.html
+++ b/src/index.html
@@ -2,139 +2,140 @@
 <html lang="">
 <head>
 
-  <title><%= htmlWebpackPlugin.options.title %></title>
+    <title><%= htmlWebpackPlugin.options.title %></title>
 
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="<%= htmlWebpackPlugin.options.title %>">
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+    <meta name="msapplication-tap-highlight" content="no"/>
+    <meta name="description" content="<%= htmlWebpackPlugin.options.title %>">
 
-  <!-- use http://www.favicon-generator.org/ to replace files in public/icon-->
-  <link rel="apple-touch-icon" sizes="57x57" href="/assets/icon/apple-icon-57x57.png">
-  <link rel="apple-touch-icon" sizes="60x60" href="/assets/icon/apple-icon-60x60.png">
-  <link rel="apple-touch-icon" sizes="72x72" href="/assets/icon/apple-icon-72x72.png">
-  <link rel="apple-touch-icon" sizes="76x76" href="/assets/icon/apple-icon-76x76.png">
-  <link rel="apple-touch-icon" sizes="114x114" href="/assets/icon/apple-icon-114x114.png">
-  <link rel="apple-touch-icon" sizes="120x120" href="/assets/icon/apple-icon-120x120.png">
-  <link rel="apple-touch-icon" sizes="144x144" href="/assets/icon/apple-icon-144x144.png">
-  <link rel="apple-touch-icon" sizes="152x152" href="/assets/icon/apple-icon-152x152.png">
-  <link rel="apple-touch-icon" sizes="180x180" href="/assets/icon/apple-icon-180x180.png">
-  <link rel="icon" type="image/png" sizes="192x192"  href="/assets/icon/android-icon-192x192.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="/assets/icon/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="96x96" href="/assets/icon/favicon-96x96.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="/assets/icon/favicon-16x16.png">
-  <link rel="manifest" href="/assets/manifest.json">
-  <link rel="stylesheet" href="/assets/css/main.css">
-  <% if (htmlWebpackPlugin.options.metadata.customLoginStyle === true) { %>
-  <link rel="stylesheet" href="/assets/css/login.css">
-  <% } %>
-  <meta name="msapplication-TileColor" content="#00bcd4">
-  <meta name="msapplication-TileImage" content="/assets/icon/ms-icon-144x144.png">
-  <meta name="theme-color" content="#00bcd4">
-  <!-- end favicon -->
+    <!-- use http://www.favicon-generator.org/ to replace files in public/icon-->
+    <link rel="apple-touch-icon" sizes="57x57" href="/assets/icon/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="/assets/icon/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="/assets/icon/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="/assets/icon/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="/assets/icon/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="/assets/icon/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="/assets/icon/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="/assets/icon/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/assets/icon/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="/assets/icon/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/assets/icon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="/assets/icon/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/assets/icon/favicon-16x16.png">
+    <link rel="manifest" href="/assets/manifest.json">
+    <link rel="stylesheet" href="/assets/css/main.css">
+    <% if (htmlWebpackPlugin.options.metadata.customLoginStyle === true) { %>
+    <link rel="stylesheet" href="/assets/css/login.css">
+    <% } %>
+    <meta name="msapplication-TileColor" content="#00bcd4">
+    <meta name="msapplication-TileImage" content="/assets/icon/ms-icon-144x144.png">
+    <meta name="theme-color" content="#00bcd4">
+    <!-- end favicon -->
 
-  <!-- base url -->
-  <base href="<%= htmlWebpackPlugin.options.metadata.baseUrl %>">
-  <style>
-    #preloader {
-      position: fixed;
-      width: 100%;
-      height: 100%;
-      background-color: #fff;
-    }
+    <!-- base url -->
+    <base href="<%= htmlWebpackPlugin.options.metadata.baseUrl %>">
+    <style>
+        #preloader {
+            position: fixed;
+            width: 100%;
+            height: 100%;
+            background-color: #fff;
+        }
 
-    #body-container.loading app {
-      display: none;
-    }
+        #body-container.loading app {
+            display: none;
+        }
 
-    body {
-      position: relative;
-      width: 100%;
-      height: 100vh;
-      font-family: "Segoe UI", sans-serif;
-    }
+        body {
+            position: relative;
+            width: 100%;
+            height: 100vh;
+            font-family: "Segoe UI", sans-serif;
+        }
 
-    #preloader .wrap {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-    }
+        #preloader .wrap {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+        }
 
-    #preloader .text {
-      color: #fbae17;
-      display: inline-block;
-      margin-left: 5px;
-      font-size: 15px;
-      line-height: 15px;
-    }
+        #preloader .text {
+            color: #fbae17;
+            display: inline-block;
+            margin-left: 5px;
+            font-size: 15px;
+            line-height: 15px;
+        }
 
-    #preloader .bounceball {
-      position: relative;
-      display: inline-block;
-      height: 37px;
-      width: 15px;
-    }
+        #preloader .bounceball {
+            position: relative;
+            display: inline-block;
+            height: 37px;
+            width: 15px;
+        }
 
-    #preloader .bounceball:before {
-      position: absolute;
-      content: '';
-      display: block;
-      top: 0;
-      width: 15px;
-      height: 15px;
-      border-radius: 50%;
-      background-color: #fbae17;
-      transform-origin: 50%;
-      animation: preloader-bounce 500ms alternate infinite ease;
-    }
+        #preloader .bounceball:before {
+            position: absolute;
+            content: '';
+            display: block;
+            top: 0;
+            width: 15px;
+            height: 15px;
+            border-radius: 50%;
+            background-color: #fbae17;
+            transform-origin: 50%;
+            animation: preloader-bounce 500ms alternate infinite ease;
+        }
 
-    @keyframes preloader-bounce {
-      0% {
-        top: 30px;
-        height: 5px;
-        border-radius: 60px 60px 20px 20px;
-        transform: scaleX(2);
-      }
-      35% {
-        height: 15px;
-        border-radius: 50%;
-        transform: scaleX(1);
-      }
-      100% {
-        top: 0;
-      }
-    }
+        @keyframes preloader-bounce {
+            0% {
+                top: 30px;
+                height: 5px;
+                border-radius: 60px 60px 20px 20px;
+                transform: scaleX(2);
+            }
+            35% {
+                height: 15px;
+                border-radius: 50%;
+                transform: scaleX(1);
+            }
+            100% {
+                top: 0;
+            }
+        }
 
-  </style>
+    </style>
 </head>
 
 <body id="body-container" class="loading">
-  <app>
-  </app>
+    <app>
+    </app>
 
-  <!-- preload will visible once page is loaded and hidden until the authentication is finished -->
-  <div id="preloader">
+    <!-- preload will visible once page is loaded and hidden until the authentication is finished -->
+    <div id="preloader">
     <div class="wrap">
       <div class="loading">
         <div class="bounceball"></div>
         <div class="text">NOW LOADING</div>
       </div>
     </div>
-  </div>
+    </div>
 
-  <script>
+    <script>
     ga_events = [];
-  </script>
-  <% if (htmlWebpackPlugin.options.metadata.GA !== '') { %>
-  <script>
+    </script>
+    <% if (htmlWebpackPlugin.options.metadata.GA !== '') { %>
+    <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
         (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
       m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
     })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
     ga('create', '<%= htmlWebpackPlugin.options.metadata.GA %>', 'auto');
-//    ga('send', 'pageview');
+    //    ga('send', 'pageview');
     if(ga_events && ga_events.length > 0) {
       while(ga_events.length > 0) {
         var events = ga_events.shift();
@@ -142,13 +143,13 @@
       }
     }
 
-  </script>
-  <% } %>
+    </script>
+    <% } %>
 
-  <% if (htmlWebpackPlugin.options.metadata.ENV === 'development') { %>
-  <!-- Webpack Dev Server reload -->
-  <script src="/webpack-dev-server.js"></script>
-  <% } %>
+    <% if (htmlWebpackPlugin.options.metadata.ENV === 'development') { %>
+    <!-- Webpack Dev Server reload -->
+    <script src="/webpack-dev-server.js"></script>
+    <% } %>
 
 </body>
 </html>
